--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,20 +5,10 @@
     },
     "extends": [
         "eslint:recommended",
-        "plugin:react/recommended",
-        "plugin:@typescript-eslint/recommended"
+        "plugin:react/recommended"
     ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
     "plugins": [
-        "react",
-        "@typescript-eslint"
+        "react"
     ],
     "rules": {
         "indent": [
@@ -33,6 +23,6 @@
             "error",
             "always"
         ],
-        "@typescript-eslint/explicit-module-boundary-types": "off"
+        "react/prop-types": "off"
     }
 }
