--- a/package.json
+++ b/package.json
@@ -13,15 +13,9 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@types/node": "^14.14.25",
-    "@types/react": "^17.0.1",
-    "@types/react-dom": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
     "eslint": "^7.19.0",
     "eslint-plugin-react": "^7.22.0",
-    "react-scripts": "^4.0.2",
-    "typescript": "^4.1.3"
+    "react-scripts": "^4.0.2"
   },
   "browserslist": {
     "production": [
