--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdi/react": "^1.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-flip-move": "^3.0.4",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
