--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
             "always"
         ],
         "react/prop-types": "off",
-        "react/display-name": "off"
+        "react/display-name": "off",
+        "no-debugger": "off"
     }
 }
